Added some CSS styling

--- a/index.html
+++ b/index.html
@@ -1,26 +1,27 @@
 <!DOCTYPE HTML>
 <html>
+        <link type="text/css" rel="styles" href="styles.css"/>
     <head>
         <title>Food</title>
     </head>
     <body>
         <main>
-            <h1>Claire's Favorite dishes to eat</h1>
-                <p>Food is what brings my family together and has always been a big part of my life. These are just a few of my favorite comfort food.</p>
+            <h1 class="headers">Claire's Favorite dishes to eat</h1>
+                <p id="bang">Food is what brings my family together and has always been a big part of my life. These are just a few of my favorite comfort food.</p>
                 <img src="https://goo.gl/images/BcPjfq" />
             <article>
-                <h1>Mac&amp;Cheese</h1>
-                    <p>My first food love. This is what i would always have my dad make me on my birthday. Over the years i have made some interestig variations of the original dish.</p>
+                <h2 class="headers">Mac&amp;Cheese</h2>
+                    <p id="bang">My first food love. This is what i would always have my dad make me on my birthday. Over the years i have made some interestig variations of the original dish.</p>
                     <img src="https://goo.gl/images/suJDnU" />
             </article>
             <article>
-                <h1>Drunken Noodles</h1>
-                    <p>This is the perfect hang-over dish. The harty flavors of the sauce, noodles, and veggies really fill you up. Gets you in the perfect state to sleep the rest of the hang-over away. </p>
+                <h2 class="headers">Drunken Noodles</h2>
+                    <p id="bang">This is the perfect hang-over dish. The harty flavors of the sauce, noodles, and veggies really fill you up. Gets you in the perfect state to sleep the rest of the hang-over away. </p>
                     <img src="https://goo.gl/images/4TQnvc" />                   
             </article>
             <article>
-                <h1>Seasonal Salad</h1>
-                <p>I'm usually not a fruit-in-salad person, but this salad is on a whole different level. It is from Teaspoon Cafe in Edwardsville where they make their own poppy seed dressing that goes on this salad. It will make you re-think your life decisions on food.</p>
+                <h2 class="headers">Seasonal Salad</h2>
+                <p id="bang">I'm usually not a fruit-in-salad person, but this salad is on a whole different level. It is from Teaspoon Cafe in Edwardsville where they make their own poppy seed dressing that goes on this salad. It will make you re-think your life decisions on food.</p>
                 <img src="https://goo.gl/images/HK3wXG" />
             </article>
         </main>
