Finished work on HTML page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <html>
-        <link type="text/css" rel="styles" href="styles.css"/>
     <head>
         <title>Food</title>
+        <link type="text/css" rel="stylesheet" href="styles.css">
     </head>
     <body>
         <main>
-            <h1 class="headers">Claire's Favorite dishes to eat</h1>
+            <h1 class="headers">Claire's Favorite Dishes to Eat</h1>
                 <p id="bang">Food is what brings my family together and has always been a big part of my life. These are just a few of my favorite comfort food.</p>
                 <img src="https://goo.gl/images/BcPjfq" />
             <article>
