--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
         <main>
             <h1 class="headers">Claire's Favorite Dishes to Eat</h1>
                 <p id="bang">Food is what brings my family together and has always been a big part of my life. These are just a few of my favorite comfort food.</p>
-                <img src="https://goo.gl/images/BcPjfq" />
+                <img src="images/Family.jpeg"" />
             <article>
                 <h2 class="headers">Mac&amp;Cheese</h2>
                     <p id="bang">My first food love. This is what i would always have my dad make me on my birthday. Over the years i have made some interestig variations of the original dish.</p>
-                    <img src="https://goo.gl/images/suJDnU" />
+                    <img src="images/Mac&Cheese.jpeg" />
             </article>
             <article>
                 <h2 class="headers">Drunken Noodles</h2>
                     <p id="bang">This is the perfect hang-over dish. The harty flavors of the sauce, noodles, and veggies really fill you up. Gets you in the perfect state to sleep the rest of the hang-over away. </p>
-                    <img src="https://goo.gl/images/4TQnvc" />                   
+                    <img src="images/Drunken Noodles.jpeg" />                   
             </article>
             <article>
                 <h2 class="headers">Seasonal Salad</h2>
                 <p id="bang">I'm usually not a fruit-in-salad person, but this salad is on a whole different level. It is from Teaspoon Cafe in Edwardsville where they make their own poppy seed dressing that goes on this salad. It will make you re-think your life decisions on food.</p>
-                <img src="https://goo.gl/images/HK3wXG" />
+                <img src="images/seasonal salad.jpeg" />
             </article>
         </main>
         <footer>
