--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             </article>
         </main>
         <footer>
-            <p>Posted by: Claire Baird</p>
+            <p &copy;>Posted by: Claire Baird</p>
+            
         </footer>
     </body>
 </html>
