--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <img src="images/Family.jpeg"" />
             <article>
                 <h2 class="headers">Mac&amp;Cheese</h2>
-                    <p id="bang">My first food love. This is what i would always have my dad make me on my birthday. Over the years i have made some interestig variations of the original dish.</p>
+                    <p id="bang">My first food love. This is what i would always have my dad make me on my birthday or any other occasion that i could pick what we were eating. Over the years i have made some interestig variations of the original dish.</p>
                     <img src="images/Mac&Cheese.jpeg" />
             </article>
             <article>
