--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </article>
         </main>
         <footer>
-            <p &copy;>Posted by: Claire Baird</p>
+            <p>&copy;Posted by: Claire Baird</p>
             
         </footer>
     </body>
